--- a/css/style.css
+++ b/css/style.css
@@ -88,36 +88,96 @@ p {
   padding-bottom: 30px;
 }
 .deals {
-	position: absolute;
-	top: -10px;
-	left: 0px;
+  position: absolute;
+  top: -10px;
+  left: 0px;
 }
-.deals img{
+.deals img {
   width: 230px;
   height: 230px;
 }
 
 /* Banner Part End  */
 
-/* Banner Part Start  */
-.dreamsPart{
+/* Dreams Part Start  */
+.dreamsPart {
   padding: 100px 0;
 }
-.leftLowerDiv{
-  width: 250px;
-  height: 350px;
-  background: #646469;
+.leftLowerDiv {
+}
+.leftUpperDiv {
+}
+.leftLowerDiv img {
+  height: 650px;
   position: relative;
 }
-.leftUpperDiv{
-  width: 250px;
-  height: 350px;
-  background: #B9B8C2;
+.leftUpperDiv img {
+  height: 650px;
   position: absolute;
   top: -50px;
   right: -80px;
 }
-/* Banner Part End  */
+.leftDiv h5 {
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Nunito", serif;
+  color: #ff5a3c;
+}
+.leftDiv h3 {
+  font-size: 35px;
+  font-weight: 700;
+  font-family: "Poppins", serif;
+  line-height: 130%;
+  padding: 20px 0;
+}
+.perfect {
+  height: 170px;
+  width: 550px;
+  border-radius: 5px;
+  -webkit-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+}
+.perfect_sec {
+  height: 170px;
+  width: 550px;
+  border-radius: 5px;
+  -webkit-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  background: #ff5a3c;
+}
+.perfectText h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #0a2c3d;
+  font-family: "Poppins", serif;
+  padding-bottom: 10px;
+}
+.perfectText p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #0a2c3d;
+  font-family: "Nunito", serif;
+  line-height: 130%;
+  color: #5c727d;
+}
+.perfectText_sec h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #ffff;
+  font-family: "Poppins", serif;
+  padding-bottom: 10px;
+}
+.perfectText_sec p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #0a2c3d;
+  font-family: "Nunito", serif;
+  line-height: 130%;
+  color: #ffff;
+}
+/* Dreams Part End  */
 
 /* Banner Part Start  */
 /* Banner Part End  */
