fixed navbar problem

--- a/css/style.css
+++ b/css/style.css
@@ -28,27 +28,28 @@ p {
 
 /* Header part start   */
 .navbar {
+  /* position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px; */
 }
+/* .contact{
+  margin-left: 150px;
+} */
 .contactBtn {
   padding: 15px 30px;
-  border-radius: 10px;
+  border-radius: 18px;
   background: #ff5a3c;
   color: white;
 }
 .nav-item {
-  padding: 0 20px;
+  padding: 0 15px;
 }
 .nav-item a {
   font-size: 18px;
   font-weight: 600;
   font-family: "Open Sans", serif;
   color: #29313d;
-  font-family: "Nunito", serif;
-}
-.contact .fa-solid {
-  font-size: 25px;
-  padding-right: 15px;
-  color: #143445;
 }
 /* Header part end  */
 
