--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,12 +45,12 @@
     width: 100%;
     text-align: center;
   }
-  .topText {
+  /* .topText {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+  } */
 
   .bannerPart {
     padding: 40px 0;
@@ -80,7 +80,7 @@
   }
   .leftLowerDiv img {
     height: 490px;
-    width: 450px;
+    width: 400px;
   }
   .leftDiv h5{
     text-align: center;
@@ -92,11 +92,11 @@
   }
   .perfect {
     height: 150px;
-    width: 420px;
+    width: 390px;
   }
   .perfect_sec {
     height: 150px;
-    width: 420px;
+    width: 390px;
   }
   /* Dreams  part End  */
 }
