--- a/css/style.css
+++ b/css/style.css
@@ -135,18 +135,26 @@ p {
   height: 170px;
   width: 550px;
   border-radius: 5px;
+  transition: .5s;
+}
+.perfect:hover{
   -webkit-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
   box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
 }
 .perfect_sec {
   height: 170px;
   width: 550px;
   border-radius: 5px;
+  background: #ff5a3c;
+  transition: .5s;
+}
+.perfect_sec:hover{
   -webkit-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
   box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
-  background: #ff5a3c;
+  cursor: pointer;
 }
 .perfectText h4 {
   font-size: 18px;
@@ -180,11 +188,137 @@ p {
 }
 /* Dreams Part End  */
 
-/* Banner Part Start  */
-/* Banner Part End  */
+/* space Part Start  */
+.spacePart{
+  padding: 120px 0;
+  background: url(../images/slider.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.videos i{
+  font-size: 70px;
+  color: #ff5a3c;
+}
+.videos{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% ,-50%);
+}
+.spaceText h5{
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Nunito", serif;
+  color: #ff5a3c;
+}
+.spaceText h3{
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Poppins", serif;
+  line-height: 120%;
+  padding: 20px 0;
+  color: #0A2C3D;
+}
+.spaceText p{
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Nunito", serif;
+  line-height: 140%;
+  color: #0A2C3D;
+}
+.btnText i{
+  font-size: 30px;
+  color: #ff5a3c;
+}
+.spaceText h6{
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Nunito", serif;
+  line-height: 120%;
+}
+/* space Part End  */
 
-/* Banner Part Start  */
-/* Banner Part End  */
+/* Service Part Start  */
+.servicePart{
+  padding: 120px 0;
+}
+.serviceText{
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Nunito", serif;
+  color: #ff5a3c;
+  text-align: center;
+}
+.serviceText h3{
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Poppins", serif;
+  line-height: 120%;
+  padding: 20px 0;
+  color: #0A2C3D;
+  text-align: center;
+}
+.serviceCard{
+  height: 450px;
+  background: #f6f7f7;
+  position: relative;
+  transition: .5s; 
+}
+.serviceCard:hover{
+  -webkit-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px -2px 15px -5px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
+.serviceImg{
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50% ,-10%);
+}
+.serviceCard h3{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% ,-50%);
+  font-size: 30px;
+  font-weight: 600;
+  font-family: "Poppins", serif;
+  color: #0A2C3D;
+  transition: .5s; 
+}
+.serviceCard h3:hover{
+  color: #ff5a3c;
+}
+.serviceCard p{
+  position: absolute;
+  top: 60%;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Nunito", serif;
+  line-height: 140%;
+  color: #0A2C3D;
+  text-align: center;
+}
+.serviceCard a{
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50% ,-90%);
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Nunito", serif;
+  line-height: 140%;
+  color: black;
+  text-align: center;
+  transition: .5s;
+}
+.serviceCard a:hover{
+  color: #ff5a3c;
+}
+/* Service Part End  */
 
 /* Banner Part Start  */
 /* Banner Part End  */
