--- a/css/responsive.css
+++ b/css/responsive.css
@@ -131,9 +131,33 @@
   }
   /* Service Part End  */
 
-  /* space Part Start  */
-
-  /* space Part End  */
+  /* appartment Part Start  */
+  .gardenArea{
+    width: 100%;
+  }
+  .gardenDesing{
+    width: 100%;
+    margin-top: 50px;
+  }
+  .mesurment{
+    flex-wrap: wrap;
+  }
+  .mesurment li{
+    width: 32%;
+  }
+  .mesurment a{
+    padding-top: 20px;
+  }
+  .gardenMesurment{
+    flex-wrap: wrap;
+  }
+  .mainMesurment li{
+    font-size: 16px;
+    font-size: 400;
+    font-family: "Nunito", serif;
+    padding-bottom: 35px;
+  }
+  /* appartment Part End  */
 
   /* space Part Start  */
 
