--- a/css/responsive.css
+++ b/css/responsive.css
@@ -137,7 +137,7 @@
   }
   .gardenDesing{
     width: 100%;
-    margin-top: 100px;
+    padding-top: 200px;
   }
   .mesurment{
     flex-wrap: wrap;
