--- a/css/responsive.css
+++ b/css/responsive.css
@@ -151,6 +151,12 @@
   .gardenMesurment{
     flex-wrap: wrap;
   }
+  .gardenInnerArea h3 {
+    padding-bottom: 20px;
+  }
+  .gardenInnerArea {
+    margin-left: 50px;
+  }
   .mainMesurment li{
     font-size: 16px;
     font-size: 400;
